[package]
name = "nodejs-semver"
version = "3.2.0"
authors = ["cijiugechu <cijiugechu@gmail.com>", "Felipe Sere <felipesere@gmail.com>", "Kat Marchán <kzm@zkat.tech>"]
description = "A node-semver compliant semver implementation in Rust."
repository = "https://github.com/cijiugechu/nodejs-semver"
documentation = "https://docs.rs/nodejs-semver"
keywords = ["semver", "parser", "npm", "nodejs", "node"]
categories = ["parser-implementations", "data-structures", "value-formatting"]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
miette = "5.10.0"
winnow = "0.4.11"
thiserror = "1.0.49"
bytecount = "0.6.4"
serde = { version = "1.0.190", features = ["derive"], optional = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
criterion         = {  version = "0.5.1", features = ["html_reports"] }
serde_json        = "1.0"

[features]
default = []
serde = ["dep:serde"]

[[bench]]
name = "parser"
harness = false
