[package]
name = "nodejs-semver"
version = "4.1.0"
authors = ["cijiugechu <cijiugechu@gmail.com>", "Felipe Sere <felipesere@gmail.com>", "Kat Marchán <kzm@zkat.tech>"]
description = "A node-semver compliant semver implementation in Rust."
repository = "https://github.com/cijiugechu/nodejs-semver"
documentation = "https://docs.rs/nodejs-semver"
keywords = ["semver", "parser", "npm", "nodejs", "node"]
exclude = ["./node-semver"]
categories = ["parser-implementations", "data-structures", "value-formatting"]
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.70.0"
edition = "2021"

[dependencies]
miette = "7.6"
winnow = "0.7"
thiserror = "2.0"
bytecount = "0.6.9"
serde = { version = "1.0.228", features = ["derive"], optional = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
criterion         = {  version = "0.5.1", features = ["html_reports"] }
serde_json        = "1.0"
serde = { version = "1.0.228", features = ["derive"] }

[features]
default = []
serde = ["dep:serde"]

[[bench]]
name = "parser"
harness = false

[[example]]
name = "serde"
path = "examples/serde.rs"
required-features = ["serde"]
